--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,16 +1,18 @@
 cmake_minimum_required(VERSION 3.5)
 
-set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -pedantic -Wextra")
 
 include_directories(
    ${CMAKE_SOURCE_DIR}
 )
 
-FILE(GLOB HEADERS
-	*.h
-)
+set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -pedantic -Wextra")
 
 add_library(core
-	${HEADERS}
+	node.h
 	node.cpp
+)
+
+add_library(plugin
+	plugin.h
+	plugin.cpp
 )
