--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,6 @@ project(Emergence)
 
 set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -pedantic -Wextra")
 
-#set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build)
-
 include_directories(
    ${CMAKE_SOURCE_DIR}/src
 )
@@ -15,5 +13,7 @@ add_executable(Emergence
 
 add_subdirectory(src/gui)
 add_subdirectory(src/core)
+add_subdirectory(plugins)
 
-target_link_libraries(Emergence gui core)
+set(CMAKE_EXE_LINKER_FLAGS "-ldl")
+target_link_libraries(Emergence gui core plugin)
