--- a/plugins/main/io/CMakeLists.txt
+++ b/plugins/main/io/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.0.0)
 
 #include_directories()
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
 add_library(io_plugin SHARED io_plugin.cpp)
 add_library(io
 	input_node.h
@@ -9,4 +10,4 @@ add_library(io
 	input_node_item.h
 	input_node_item.cpp
 	)
-target_link_libraries(io_plugin io real_t)
+target_link_libraries(io_plugin io gui real_t)
