better architecture + working plugin system

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(PLUGIN_TARGET_PATH ${CMAKE_BINARY_DIR}/lib)
-
-add_subdirectory(types)
-add_subdirectory(main)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+add_definitions(-DEMERGENCE_PLUGIN)
+add_subdirectory(io)
+add_subdirectory(condition)
