--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories(
 
 add_executable(Emergence
 	src/main.cpp
+	src/core/plugin.h
 )
 
 add_subdirectory(src/gui)
@@ -16,4 +17,4 @@ add_subdirectory(src/core)
 add_subdirectory(plugins)
 
 set(CMAKE_EXE_LINKER_FLAGS "-ldl")
-target_link_libraries(Emergence gui core plugin)
+target_link_libraries(Emergence gui core)
