--- a/plugins/io/CMakeLists.txt
+++ b/plugins/io/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.0.0)
 
 #include_directories()
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -pedantic -Wextra -fPIC")
 add_library(io_plugin SHARED io_plugin.cpp)
 add_library(io
 	input_node.h
@@ -10,4 +10,4 @@ add_library(io
 	input_node_item.h
 	input_node_item.cpp
 	)
-target_link_libraries(io_plugin io gui real_t)
+target_link_libraries(io_plugin io gui)
