--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories(
    ${CMAKE_SOURCE_DIR}
 )
 
-set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -pedantic -Wextra")
+#set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -pedantic -Wextra")
 
 add_library(core
 	node.h
