io plugin + node kernels

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -9,4 +9,15 @@ include_directories(
 add_library(core
 	node.h
 	node.cpp
+	)
+add_library(data
+	data_t.h
+	data_t.cpp
 )
+
+add_library(real
+	real_t.h
+	real_t.cpp
+)
+
+target_link_libraries(core -Wl,--whole-archive data real -Wl,--no-whole-archive)
