--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -10,19 +10,24 @@ add_library(core
 	node.h
 	node.cpp
 	)
-add_library(data
+add_library(data_t
 	data_t.h
 	data_t.cpp
 )
 
-add_library(real
+add_library(real_t
 	real_t.h
 	real_t.cpp
 )
 
-add_library(bool
+add_library(bool_t
 	bool_t.h
 	bool_t.cpp
 )
 
-target_link_libraries(core -Wl,--whole-archive data real bool -Wl,--no-whole-archive)
+add_library(color_t
+	color_t.h
+	color_t.cpp
+)
+
+target_link_libraries(core -Wl,--whole-archive data_t real_t bool_t color_t -Wl,--no-whole-archive)
