started implementing multimethods

--- a/plugins/compare/CMakeLists.txt
+++ b/plugins/compare/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.0.0)
 
 add_library(compare_plugin SHARED compare_plugin.cpp)
 add_library(compare
+	func_def.cpp
 	if_node.h
 	if_node.cpp
 	if_node_item.h
