added math plugin : only real operations

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -7,3 +7,4 @@ add_definitions(-DEMERGENCE_PLUGIN)
 add_subdirectory(io)
 add_subdirectory(compare)
 add_subdirectory(color)
+add_subdirectory(math)
