RGB node + random result when function not found + fixed cache in color node

--- a/plugins/color/CMakeLists.txt
+++ b/plugins/color/CMakeLists.txt
@@ -8,5 +8,9 @@ add_library(color
 	color_node.cpp
 	color_node_item.h
 	color_node_item.cpp
+	rgb_node.h
+	rgb_node.cpp
+	rgb_node_item.h
+	rgb_node_item.cpp
 	)
-target_link_libraries(color_plugin color color_t)
+target_link_libraries(color_plugin color color_t real_t)
