real node + minor improvments

--- a/plugins/color/CMakeLists.txt
+++ b/plugins/color/CMakeLists.txt
@@ -14,4 +14,4 @@ add_library(color
 	rgb_node_item.cpp
 	)
 resource(color.png)
-target_link_libraries(color_plugin color color_t real_t)
+target_link_libraries(color_plugin color color_t)
