--- a/plugins/math/CMakeLists.txt
+++ b/plugins/math/CMakeLists.txt
@@ -10,11 +10,21 @@ add_library(math
 	#lerp.cpp
 	math_node_items.h
 	math_node_items.cpp
-	#lerp_items.h
-	#lerp_items.cpp
+	#lerp_node_items.h
+	#lerp_node_items.cpp
+	real_node.h
+	real_node.cpp
+	real_node_item.h
+	real_node_item.cpp
 	func_def.h
 	func_def.cpp
 	)
+
+add_library(real_chooser
+	real_chooser.h
+	real_chooser.cpp
+	)
+
 resource(add.png)
 resource(subtract.png)
 resource(multiply.png)
@@ -23,4 +33,7 @@ resource(neg.png)
 resource(sqrt.png)
 resource(sin.png)
 resource(cos.png)
-target_link_libraries(math_plugin math real_t)
+resource(real.png)
+
+target_link_libraries(real_chooser real_t)
+target_link_libraries(math_plugin math real_chooser real_t)
