--- a/types/CMakeLists.txt
+++ b/types/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -pedantic -Wextra -fPIC")
 add_subdirectory(real)
 add_subdirectory(bool)
 add_subdirectory(color)
+add_subdirectory(complex)
