copy/paste + tons of improvments

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -39,9 +39,15 @@ add_library(toolbox
 	toolbox/toolbox_node_item.cpp
 	toolbox/toolbox_node_item.h
 )
+
+add_library(binary_save
+	binary_save.h
+	binary_save.cpp
+)
 resource(toolbox/open.png)
 resource(toolbox/closed.png)
 target_link_libraries(toolbox graphics_view)
+target_link_libraries(workspace binary_save)
 
 target_link_libraries(gui -Wl,--whole-archive workspace toolbox -Wl,--no-whole-archive ${FLTK_LIBRARIES})
 #target_link_libraries(gui workspace toolbox ${FLTK_LIBRARIES})
